--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <![endif]-->
   </head>
 <main>
-    <h1>Tycho mio</h1>
+    <h1>Tycho</h1>
     <h2>Artist Spotlight</h2>
     <hr>
     <p class="about">Tycho is an American ambient music project led by Scott Hansen as primary composer, songwriter and producer. Hailing from San Francisco, California, he is known as ISO50 for his photographic and design works. His music is a combination of downtempo
