--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
     <title>Tycho artist blog/profile concept</title>
     <meta name="description" content="Based on the dribbble shot by Drew Sullivan, (https://dribbble.com/shots/3002189-Tycho/). Utilises grid, writing-mode, object-fit, viewport units and aspect-ratio media queries.">
     <meta name="author" content="Chen Hui Jing">
-
-    <link rel="stylesheet" href="styles.scss">
+    <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
+    <!--<link rel="stylesheet" href="styles.scss"> ->
 
     <!--[if lt IE 9]>
     <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
