--- a/src/index.html
+++ b/src/index.html
@@ -15,16 +15,15 @@
     <![endif]-->
   </head>
 <main>
-    <h1>Tycho</h1>
-    <h2>Artist Spotlight</h2>
+    <h1>El Hérfano de los Zhao</h1>
+    <h2>Ji Juxiang</h2>
     <hr>
-    <p class="about">Tycho is an American ambient music project led by Scott Hansen as primary composer, songwriter and producer. Hailing from San Francisco, California, he is known as ISO50 for his photographic and design works. His music is a combination of downtempo
-      vintage-style synthesizers and ambient melodies.</p>
-    <a href="javascript:void(0)">Read more</a>
+    <p class="about">El clan Zhao al completo es exterminado en una matanza. La propia reina trae a su vientre un Zhao (Zhao Wu) y, el mismo día de la masacre, da a luz. Cheng Ying, un médico-sanador, lo asiste en el parto y sacrifica su propio hijo acabado de nacer para salvar el último miembro de la dinastía. Cuando se hace grande, Zhao Wu, con la ayuda del doctor, busca vengarse de la familia rival y de los asesinos y descubre  la implacable verdad de su infancia, emprendiendo un épico viaje de sacrificio y venganza.</p>
+    <a href="javascript:void(0)">Leer más</a>
     <img src="https://www.chenhuijing.com/demos/grids-tycho/img/tycho-band.jpg" alt="Tycho Live at Toronto">
     <div class="location">
       <p>10.2.2010 Toronto<br>The Drake Hotel</p>
     </div>
-    <button type="button">Tour dates</button>
+    <button type="button">Fechas del Tour</button>
 </main>
 </html>
