--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Tycho artist blog/profile concept</title>
+    <title>Obra de teatro del Huérfano de los Zhao</title>
     <meta name="description" content="Based on the dribbble shot by Drew Sullivan, (https://dribbble.com/shots/3002189-Tycho/). Utilises grid, writing-mode, object-fit, viewport units and aspect-ratio media queries.">
     <meta name="author" content="Chen Hui Jing">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
@@ -16,11 +16,11 @@
   </head>
 <main>
     <h1>El Hérfano de los Zhao</h1>
-    <h2>Ji Juxiang</h2>
+    <h2>Autor: Ji Juxiang</h2>
     <hr>
     <p class="about">El clan Zhao al completo es exterminado en una matanza. La propia reina trae a su vientre un Zhao (Zhao Wu) y, el mismo día de la masacre, da a luz. Cheng Ying, un médico-sanador, lo asiste en el parto y sacrifica su propio hijo acabado de nacer para salvar el último miembro de la dinastía. Cuando se hace grande, Zhao Wu, con la ayuda del doctor, busca vengarse de la familia rival y de los asesinos y descubre  la implacable verdad de su infancia, emprendiendo un épico viaje de sacrificio y venganza.</p>
     <a href="javascript:void(0)">Leer más</a>
-    <img src="https://www.chenhuijing.com/demos/grids-tycho/img/tycho-band.jpg" alt="Tycho Live at Toronto">
+    <img src="./assets/images/huerfano_Z.jpg" alt="El Huérfano de los Zhao">
     <div class="location">
       <p>10.2.2010 Toronto<br>The Drake Hotel</p>
     </div>
