--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Obra de teatro del Huérfano de los Zhao</title>
+    <title>Obra de teatro: El Huérfano de los Zhao</title>
     <meta name="description" content="Based on the dribbble shot by Drew Sullivan, (https://dribbble.com/shots/3002189-Tycho/). Utilises grid, writing-mode, object-fit, viewport units and aspect-ratio media queries.">
     <meta name="author" content="Chen Hui Jing">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
