--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
 
     <title>Obra de teatro: El Huérfano de los Zhao</title>
     <meta name="description" content="Based on the dribbble shot by Drew Sullivan, (https://dribbble.com/shots/3002189-Tycho/). Utilises grid, writing-mode, object-fit, viewport units and aspect-ratio media queries.">
-    <meta name="author" content="Chen Hui Jing">
+    <meta name="author" content="Fernando Manzano Blas">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
     <!--<link rel="stylesheet" href="styles.scss"> ->
 
@@ -15,14 +15,14 @@
     <![endif]-->
   </head>
 <main>
-    <h1>El Hérfano de los Zhao</h1>
+    <h1>El Huérfano de los Zhao</h1>
     <h2>Autor: Ji Juxiang</h2>
     <hr>
     <p class="about">El clan Zhao al completo es exterminado en una matanza. La propia reina trae a su vientre un Zhao (Zhao Wu) y, el mismo día de la masacre, da a luz. Cheng Ying, un médico-sanador, lo asiste en el parto y sacrifica su propio hijo acabado de nacer para salvar el último miembro de la dinastía. Cuando se hace grande, Zhao Wu, con la ayuda del doctor, busca vengarse de la familia rival y de los asesinos y descubre  la implacable verdad de su infancia, emprendiendo un épico viaje de sacrificio y venganza.</p>
     <a href="javascript:void(0)">Leer más</a>
     <img src="./assets/images/huerfano_Z.jpg" alt="El Huérfano de los Zhao">
     <div class="location">
-      <p>10.2.2010 Toronto<br>The Drake Hotel</p>
+      <p>03.12.2021 Barcelona<br>M4.258</p>
     </div>
     <button type="button">Fechas del Tour</button>
 </main>
