--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Based on the dribbble shot by Drew Sullivan, (https://dribbble.com/shots/3002189-Tycho/). Utilises grid, writing-mode, object-fit, viewport units and aspect-ratio media queries.">
     <meta name="author" content="Fernando Manzano Blas">
     <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
+    <link  rel="icon"   href="./assets/images/Teatro.png" type="image/png" />
     <!--<link rel="stylesheet" href="styles.scss"> ->
 
     <!--[if lt IE 9]>
@@ -22,7 +23,7 @@
     <a href="javascript:void(0)">Leer más</a>
     <img src="./assets/images/huerfano_Z.jpg" alt="El Huérfano de los Zhao">
     <div class="location">
-      <p>03.12.2021 Barcelona<br>M4.258</p>
+      <p>03/12/2021 Barcelona<br>M4.258</p>
     </div>
     <button type="button">Fechas del Tour</button>
 </main>
