--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
     <div class="location">
       <p>03/12/2021 Barcelona<br>M4.258</p>
     </div>
-    <button type="button">Fechas del Tour</button>
+    <button type="button">Miembros del grupo</button>
+    <a href="miembros.html" class="button">Miembros del grupo</a>
 </main>
 </html>
