--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     <div class="location">
       <p>03/12/2021 Barcelona<br>M4.258</p>
     </div>
-    <button type="button">Miembros del grupo</button>
+    <!--<button type="button">Miembros del grupo</button>-->
     <a href="" class="boton">Miembros del grupo</a>
 </main>
 </html>
