--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <h2>Autor: Ji Juxiang</h2>
     <hr>
     <p class="about">El clan Zhao al completo es exterminado en una matanza. La propia reina trae a su vientre un Zhao (Zhao Wu) y, el mismo día de la masacre, da a luz. Cheng Ying, un médico-sanador, lo asiste en el parto y sacrifica su propio hijo acabado de nacer para salvar el último miembro de la dinastía. Cuando se hace grande, Zhao Wu, con la ayuda del doctor, busca vengarse de la familia rival y de los asesinos y descubre  la implacable verdad de su infancia, emprendiendo un épico viaje de sacrificio y venganza.</p>
-    <a href="javascript:window.location.href('./articulo.thml')">Leer más</a>
+    <a href="javascript:window.location('./articulo.thml')">Leer más</a>
     <img src="./assets/images/huerfano_Z.jpg" alt="El Huérfano de los Zhao">
     <div class="location">
       <p>03/12/2021 Barcelona<br>M4.258</p>
