--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,6 @@
       <p>03/12/2021 Barcelona<br>M4.258</p>
     </div>
     <!--<button type="button">Miembros del grupo</button>-->
-    <a href="" class="boton">Miembros del grupo</a>
+    <a href="miembros.html" class="boton">Miembros del grupo</a>
 </main>
 </html>
