--- a/src/miembros.html
+++ b/src/miembros.html
@@ -1,8 +1,17 @@
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <title>Miembro de la obra de teatro: El Huérfano de los Zhao</title>
+  <meta name="description" content="Máster UOC">
+  <meta name="author" content="Fernando Manzano Blas">
+  <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
+  <link  rel="icon"   href="./assets/images/Teatro.png" type="image/png" />
 
 </head>
 <main>
-
+  <h1>Miembros de la compañia</h1>
 </main>
 </html>
